[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshub"
dynamic = ["version"]
description = "Official CLI for Meshub"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Meshub Team", email = "support@meshub.us"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "click~=8.1",
    "PyYAML~=6.0",
    "requests~=2.32",
]

[project.optional-dependencies]
dev = [
    "black~=24.10",
    "build~=1.2",
    "flake8~=7.1",
    "mypy~=1.13",
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "tox~=4.23",
    "twine~=6.0",
    "types-PyYAML~=6.0",
    "types-requests~=2.32",
]

[project.scripts]
meshub = "meshub.cli:main"

[project.urls]
Homepage = "https://meshub.us"
Repository = "https://github.com/gmarciani/meshub-cli"
Issues = "https://github.com/gmarciani/meshub-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["meshub*"]

[tool.setuptools.dynamic]
version = {attr = "meshub.constants.__version__"}

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
omit = ["*/__init__.py"]
